Nutch Change Log

Nutch Current Development 1.10-SNAPSHOT

* NUTCH-1882 ant eclipse target to add output path to src/test (snagel)

* NUTCH-1876 Upgrade to Crawler Commons 0.5 (jnioche)

* NUTCH-1874 FileDumper comment typos ( Arthur Cinader via lewismc)

* NUTCH-1164 Write JUnit tests for protocol-http (nimafl via snagel)

* NUTCH-1868 Document and improve CLI for FileDumper tool (lewismc)

* NUTCH-1869 Add a flag to -mimeType fiag to FileDumper (lewismc)

* NUTCH-1867 CrawlDbReader: use setFloat to pass min score (lewismc, snagel)

* NUTCH-1826, NUTCH-1864 indexchecker fails if solr.server.url not configured (lewismc, snagel)

* NUTCH-1866 ant eclipse target should not delete runtime (nimafl via lewismc)

* NUTCH-1857 readb -dump -format csv should use comma (lewismc)

* NUTCH-1853 Add commented out WebGraph executions to ./bin/crawl (lewismc)

* NUTCH-1844 testresources/testcrawl not referenced anywhere in code (mattmann)

* NUTCH-1839 Improve WebGraph CLI parsing (lewismc)

* NUTCH-1526 Create SegmentContentDumperTool for easily extracting out file contents from SegmentDirs (mattmann, lewismc, Julien Le Dem)

* NUTCH-1840 the describe function in SolrIndexWriter is not correct (kaveh minooie via jnioche)

* NUTCH-1837 Upgrade to Tika 1.6 (jnioche)

* NUTCH-1829 Generator : unable to distinguish real errors (Mathieu Bouchard via jnioche)
 
* NUTCH-1835 Nutch's Solr schema doesn't work with Solr 4.9 because of the RealTimeGet handler (mattmann)

* NUTCH-1833 Include version number within nutch binary usage statement (Rishi Verma via mattmann)

* NUTCH-1832 Make Nutch work without an indexer (mattmann)

* NUTCH-1828 bin/crawl : incorrect handling of nutch errors (Mathieu Bouchard via jnioche)

* NUTCH-1775 IndexingFilter: document origin of passed CrawlDatum (snagel)

* NUTCH-1693 TextMD5Signature computed on textual content (Tien Nguyen Manh, markus via snagel)
